applications/keycloak/deployment-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:15.0.0
        volumeMounts:
        - mountPath: /opt/jboss/keycloak/standalone/deployments/
          name: deployments
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
        lifecycle:
          postStart:
            exec:
              command: ['sh', '-c', 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost:8080/auth)" != "200" ]]; do sleep 5; done && /opt/jboss/keycloak/bin/kcadm.sh config credentials --server http://localhost:8080/auth --realm master --user $KEYCLOAK_USER --password $KEYCLOAK_PASSWORD &&  /opt/jboss/keycloak/bin/kcadm.sh update events/config -s "eventsEnabled=true" -s "adminEventsEnabled=true" -s "eventsListeners+=metrics-listener" && rm -f /opt/jboss/.keycloak/kcadm.config' [...]
      volumes:
      - name: deployments
        emptyDir: {}
