applications/keycloak/service-keycloak-mgmt.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-mgmt
  labels:
    app: keycloak-mgmt
spec:
  ports:
  - name: mgmt
    port: 9990
    targetPort: 9990
  selector:
    app: keycloak
  type: ClusterIP
